--- a/index3.html
+++ b/index3.html
@@ -5,15 +5,15 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style3.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<a href="index1.html"><img class="logo" src="img/plant_1.png"></a>
 		<div class="nav">
-			<a href="#">Головна</a>
+			<a href="index1.html">Головна</a>
 			<a href="index2.html">Дослідження</a>
-			<a href="index3.html">Еко-акція</a>
+			<a href="#">Еко-акція</a>
 		</div>
 		<a class="test" href="#">ТЕСТ</a>
 		<h2>ЕКОЛОГІЯ</h2>
