--- a/start.html
+++ b/start.html
@@ -12,7 +12,7 @@
 	<img class="logo" src="img/plant_1.png">
 	<h1>ЕКОЛОГІЯ</h1>
 	<h2>планета Земля</h2>
-	<a class="link" href="index.html">Вперед</a>
+	<a class="link" href="index1.html">Вперед</a>
 	
 </body>
 </html>
