--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,9 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style1.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -32,10 +34,56 @@
 			</div>
 			<div class="ontology">
 				<p class="ontology_title">Онтологія відносин "людина-природа"</p>
+				<div class="ontology_line">
+					<div class="ball1"></div>
+					<div class="ball2"></div>
+					<div class="ball3"></div>
+					<div class="ontology_line1"></div>
+					<div class="ontologu_divs">
+					<div class="ontology_div">
+						<p>450</p>
+						<h3>традиційне суспільство</h3>
+					</div>
+					<div class="ontology_div">
+						<p>1820</p>
+						<h3> індустріальне суспільство</h3>
+					</div>
+					<div class="ontology_div">
+						<p>1980</p>
+						<h3>інформаційне суспільство</h3>
+					</div>
+					</div>
+					<a href="#" class="ontology_more">Детальніше</a>
+				</div>
+			</div>
+			<div class="famous">
+				<div class="famous1">
+					<img src="img/vernadskiy.png">
+					<h3>Микола Вернадський</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra at eros vel vehicula. Nam venenatis commodo erat, non feugiat purus cursus placerat. </p>
+				</div>
+				<div class="famous1">
+					<img src="img/tesla.png">
+					<h3>Нікола Тесла</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra at eros vel vehicula. Nam venenatis commodo erat, non feugiat purus cursus placerat. </p>
+				</div>
+				<div class="famous1">
+					<img src="img/elon.png">
+					<h3>Ілон Маск</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra at eros vel vehicula. Nam venenatis commodo erat, non feugiat purus cursus placerat. </p>
+				</div>
+				<div class="famous2">
+					<h2>ВІДОМІ ЛЮДИ</h2>
+					<P>Боротьба з екологічними проблемами</P>
+				</div>
 			</div>
 		</div>
 		<div class="main2">
-			
+			<h2>Чому  <span class="green1">це</span>  <span class="yellow1">так?</span></h2>
+			<div class="flex">
+				<iframe width="720" height="400" src="https://www.youtube.com/embed/8l8uLm2XJrg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<p>Неухильно <b>зростає</b> <span class="green1">населення</span> нашої планети, що потребує  <span class="yellow1">відповідного</span> збільшення видобутку й виготовлення життєвих ресурсів для забезпечення  <span class="yellow1">його</span> <span class="green1">проживання</span>. Наслідки впливу людини на  <span class="yellow1">навколишнє</span> середовище сумні й <span class="green1">тривожні</span></p>
+			</div>
 		</div>
 	</main>
 	<footer>
