--- a/index1.html
+++ b/index1.html
@@ -19,13 +19,13 @@
 		</div>
 		<a class="test" href="#">ТЕСТ</a>
 		<h2>ЕКОЛОГІЯ</h2>
-		<h3>планети Земля</h2>
+		<h3>планети Земля</h3>
 	</header>
 	<main>
 		<div class="main1">
 			<div class="aboutproject">
 				<h2>ПРО ПРОЕКТ</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et <b>dolore</b> magna aliqua. Maecenas accumsan lacus vel facilisis <b>volutpat</b> est </p>
+				<p><b>Мета проекту</b> - показати чому потрібно дбати про <span class="green1">екологію, природу</span>, які будуть наслідки , якщо ми не будемо дбати про <span class="green1">природу</span>, і пояснити чому ця проблема актуальна, як ніколи </p>
 			</div>
 			<div class="slogan">
 				<p>Ми можемо</p>
@@ -59,18 +59,18 @@
 			<div class="famous">
 				<div class="famous1">
 					<img src="img/vernadskiy.png">
-					<h3>Микола Вернадський</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra at eros vel vehicula. Nam venenatis commodo erat, non feugiat purus cursus placerat. </p>
+					<h3>Володимир Вернадський</h3>
+					<p>Вернадський був першим хто почав досліджувати взаємозв'язок між рослинністю і ґрунтом довівши, що останній є продуктом життєдіяльності рослин. В його праці розкривається вплив речовини та її вплив на біогеохімічні процеси, перетворення енергії і на еволюцію планети, відобразила глобальні закони екології. </p>
 				</div>
 				<div class="famous1">
 					<img src="img/tesla.png">
 					<h3>Нікола Тесла</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra at eros vel vehicula. Nam venenatis commodo erat, non feugiat purus cursus placerat. </p>
+					<p>Нікола Тесла - провісник, ідеолог, пропагандист, натхненник широкого запровадження відновлюваних джерел енергії та сучасного енергетичного перходу Ще за життя Нікола Тесла  увійшов в історію як автор величезної кількості винаходів: змінного струму, першого пристрою дистанційного керування... </p>
 				</div>
 				<div class="famous1">
 					<img src="img/elon.png">
 					<h3>Ілон Маск</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra at eros vel vehicula. Nam venenatis commodo erat, non feugiat purus cursus placerat. </p>
+					<p>Ілон Маск пообіцяв $100 мільйонів за кращу технологію уловлювання вуглекислого газу Технологія полягає у відділенні CO2 від джерела емісії, довгостроковій ізоляції та, можливо, перероблюванні вуглекислого газу. Сучасні ж технології уловлювання вуглецю залишаються малоефективними або економічно невигідними. </p>
 				</div>
 				<div class="famous2">
 					<h2>ВІДОМІ ЛЮДИ</h2>
@@ -81,7 +81,7 @@
 		<div class="main2">
 			<h2>Чому  <span class="green1">це</span>  <span class="yellow1">так?</span></h2>
 			<div class="flex">
-				<iframe width="720" height="400" src="https://www.youtube.com/embed/8l8uLm2XJrg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="719" height="400" src="https://www.youtube.com/embed/8l8uLm2XJrg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<p>Неухильно <b>зростає</b> <span class="green1">населення</span> нашої планети, що потребує  <span class="yellow1">відповідного</span> збільшення видобутку й виготовлення життєвих ресурсів для забезпечення  <span class="yellow1">його</span> <span class="green1">проживання</span>. Наслідки впливу людини на  <span class="yellow1">навколишнє</span> середовище сумні й <span class="green1">тривожні</span></p>
 			</div>
 		</div>
