--- a/index2.html
+++ b/index2.html
@@ -17,8 +17,76 @@
 		</div>
 		<a class="test" href="#">ТЕСТ</a>
 		<h2>ЕКОЛОГІЯ</h2>
-		<h3>планети Земля</h2>
+		<h3>планети Земля</h3>
 	</header>
+	<main>
+		<div class="ecoproblems">
+			<h2>ЕКОЛОГІЧНА ПРОБЛЕМАТИКА</h2>
+			<p><b>Ми живемо на самому <span class="yellow1">дні</span> блакитного повітряного океану <span class="green1">Землі</span> - її атмосферного шару. <span class="green1">Земля</span> - це наш дім. А який він? Французький географ Елізе Реклю дуже влучно сказав: "<span class="yellow1">Людина</span> створює навколишнє середовище по своєму образу і подобі". Тобто ми маємо те <span class="green1">навколишнє середовище</span>, яке заслужили. Небачено активна й здебільшого непродумана діяльність людини, супроводжувана знищенням <span class="green1">природних ресурсів</span> і забрудненням навколишнього середовища, призвела до того, що нині <span class="green1">біосфера</span> планети перебуває в <span class="yellow1">критичному стані</span>, коли до глобальної </b></p>
+		</div>
+		<div class="problems">
+			<div class="problem1">
+				<img src="img/circle1.png">
+				<div>
+					<h3>Забруднення атмосфери</h3>
+					<p>Забруднення атмосфери - результат викидів забруднюючих речовин з різних джерел. Причинно-наслідкові зв'язки цього явища потрібно шукати в природі земної атмосфери. Так ,забруднення переносяться по повітрю від джерел появи до місць їхнього руйнуючого впливу; в атмосфері вони можуть перетерплювати зміни, включаючи хімічні перетворення одних забруднень в інші, ще більш небезпечні речовини.</p>
+				</div>
+			</div>
+			<div class="problem1">
+				<div>
+					<h3>Забруднення та виснаження водних ресурсів</h3>
+					<p>Центральне водопостачання охоплює близько 70% українців. Потреби 20% з них забезпечуються за рахунок підземних прісних вод, інші 80% п'ють з поверхневих водойм на зразок річок Дніпро і Десна. Повірте, їх складно назвати чистими.
+
+Вдумайтеся, 40% промислових і господарчо-побутових відходів, які підприємства зливають в річки, не очищаються або не відповідають встановленим санітарним вимогам! Органічні речовини, яйця гельмінтів, патогенні бактерії, сульфати, хлориди, залізо - лише мала дещиця "бонусів", які ми отримуємо разом з водою. Відразу хочеться відійти чимдалі від кранів і вийти з душу. </p>
+				</div>
+				<img src="img/circle2.png" width="400" height="650">
+
+			</div>
+			<div class="problem1">
+				<img src="img/circle3.png">
+				<div>
+					<h3>Деградація грунту</h3>
+					<p>Однією з причин бідності ґрунтів є неправильне ведення сільського господарства. 
+Бездумне використання хімічних засобів, мінеральних добрив, гербіцидів, фунгіцидів та пестицидів призводить до деградації, ерозії ґрунтів, забрудненню навколишнього природнього середовища та опустелювання земель, які раніше були ріллею.
+
+В цій історії Україна  посідає не найкраще місце, адже примусова роль «житниці» всієї Європейської частини колишнього СРСР призвела до розорювання 54% українських земель. Через це ми — одні з лідерів у Європі як за рівнем розораності, так і, відповідно, за показником деградації ґрунтів</p>
+				</div>
+			</div>
+		</div>
+		<div class="facts">
+			<div class="fact1">
+				<div class="">
+					<h3>Факт 1</h3>
+					<p>27,000 дерев знищується кожен день для виробництва туалетного папіру. </p>
+				</div>
+				<div class="">
+					<h3>Факт 2</h3>
+					<p class="fact1_text">40% усієї води у світі продається у пляшках. </p>
+				</div>
+				<div class="">
+					<h3>Факт 3</h3>
+					<p>Тропічні ліси скорочуються на 100 акрів щохвилинно. </p>
+				</div>
+			</div>
+			<div class="fact2">
+				<div class="">
+					<h3>Факт 4</h3>
+					<p>Скляна пляшка зроблена у наш час потребує 4000 років для розкладання </p>
+				</div>
+				<div class="">
+					<h3>Факт 5</h3>
+					<p class="fact2_text">Найстаріше дерево у світі більше 4600 років. </p>
+				</div>
+				<div class="fact3">
+					<h3>Факт 6</h3>
+					<p>Сміттєзвалища складаються на  35% з пакувальних матеріалів</p>
+				</div>
+			</div>
+		</div>
+		<div class="relative">
+			<img class="fact_img" src="img/scheme.png">
+		</div>
+	</main>
 	<footer>
 		<div class="flex">
 			<div><p>ЕКОЛОГІЯ планети Земля</p></div>
