--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 			<a href="#">Дослідження</a>
 			<a href="index3.html">Еко-акція</a>
 		</div>
-		<a class="test" href="#">ТЕСТ</a>
+		<a class="test" href="index4.html">Вирішення</a>
 		<h2>ЕКОЛОГІЯ</h2>
 		<h3>планети Земля</h3>
 	</header>
@@ -32,7 +32,7 @@
 					<p>Забруднення атмосфери - результат викидів забруднюючих речовин з різних джерел. Причинно-наслідкові зв'язки цього явища потрібно шукати в природі земної атмосфери. Так ,забруднення переносяться по повітрю від джерел появи до місць їхнього руйнуючого впливу; в атмосфері вони можуть перетерплювати зміни, включаючи хімічні перетворення одних забруднень в інші, ще більш небезпечні речовини.</p>
 				</div>
 			</div>
-			<div class="problem1">
+			<div class="problem1 problem2">
 				<div>
 					<h3>Забруднення та виснаження водних ресурсів</h3>
 					<p>Центральне водопостачання охоплює близько 70% українців. Потреби 20% з них забезпечуються за рахунок підземних прісних вод, інші 80% п'ють з поверхневих водойм на зразок річок Дніпро і Десна. Повірте, їх складно назвати чистими.
@@ -89,7 +89,7 @@
 	</main>
 	<footer>
 		<div class="flex">
-			<div><p>ЕКОЛОГІЯ планети Земля</p></div>
+			<div><p class="footer_ekology">ЕКОЛОГІЯ планети Земля</p></div>
 			<div class="footer_nav">
 				<img src="img/Telegram_black.png">
 				<img src="img/Twitter_black.png">
