--- a/index3.html
+++ b/index3.html
@@ -15,13 +15,71 @@
 			<a href="index2.html">Дослідження</a>
 			<a href="#">Еко-акція</a>
 		</div>
-		<a class="test" href="#">ТЕСТ</a>
+		<a class="test" href="index4.html">Вирішення</a>
 		<h2>ЕКОЛОГІЯ</h2>
 		<h3>планети Земля</h2>
 	</header>
+	<main>
+		<div class="main_head">
+			<h3>Онтологія відносин  “людина-природа”</h3>
+			<p>Людська діяльність з часом перетворилась в могутню силу, здатну впливати на природу не лише в межах окремих районів й континентів, але й на планеті в цілому. Але свого відношення до природи, її ресурсів, людина за віки не змінила, і це призвело до виникнення глобальних екологічних кризових ситуацій.</p>
+		</div>
+		<div class="main_block1">
+			<img class="main_img1" src="img/index3main1.png">
+			<div class="main_block1_div">
+				<h2>Eпоха палеоліту, мезоліту</h2>
+				<div class="dashed1"></div>
+			</div>
+		</div>
+		<div class="main_p_div">
+			<p class="main_p"> Як свідчать стародавні літописи, ще близько 4 тисяч років тому вавілонський цар Хаммураті, а пізніше - китайські й монгольські імператори та європейські монархи вже дбали про збереження природи й видавали накази про охорону лісів, трав`яного покриву степів, водних джерел.</p>
+		</div>
+		<div class="main_block2">
+			<img class="main_img1" src="img/index3main2.png">
+			<div class="main_block1_div">
+				<h2>8—4 тис. років тому</h2>
+				<div class="dashed1"></div>
+			</div>
+		</div>
+		<div class="main_block1">
+			<img class="main_img1" src="img/index3main3.png">
+			<div class="main_block1_div">
+				<h2>XIII—XI ст. до н. е.</h2>
+				<div class="dashed1"></div>
+			</div>
+		</div>
+		<div class="main_p_div">
+			<p class="main_p">Криза античного світу і його світоглядів змінила погляди і ставлення людини до природи. Оскільки еквівалентом матеріальних цінностей в цей час знову є продукти тваринного світу, людство активно знищує диких тварин.</p>
+		</div>
+		<div class="main_block2">
+			<img class="main_img1" src="img/index3main4.png">
+			<div class="main_block1_div">
+				<h2>XV—XVIII ст.</h2>
+				<div class="dashed1"></div>
+			</div>
+		</div>
+    	<div class="main_block1">
+			<img class="main_img1" src="img/index3main5.png">
+			<div class="main_block1_div">
+				<h2>Кінця XVIII і до першої половини XX ст.</h2>
+				<div class="dashed1"></div>
+			</div>
+		</div>
+		<div class="main_p_div">
+			<p class="main_p">Вирубка лісів, експлуатація морів і ґрунтів, забруднення повітря і води - усі ці фактори підштовхують наш світ до екологічної катастрофи.</p>
+		</div>
+		<div class="main_block2">
+			<img class="main_img1" src="img/index3main6.png">
+			<div class="main_block1_div padbott">
+				<h2>Друга половина XX ст. і до сьогодні</h2>
+				<div class="dashed1"></div>
+			</div>
+		</div>
+
+	</main>
 	<footer>
 		<div class="flex">
-			<div><p>ЕКОЛОГІЯ планети Земля</p></div>
+			<div><p class="footer_ekology">ЕКОЛОГІЯ планети Земля</p></div>
 			<div class="footer_nav">
 				<img src="img/Telegram_black.png">
 				<img src="img/Twitter_black.png">
